objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expenses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Meals_Details__c</fullName>
        <inlineHelpText>Please enter purpose and attendees.</inlineHelpText>
        <label>Business Meals Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Meals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Meals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Car_Travel_From__c</fullName>
        <label>Car Travel From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Travel_To__c</fullName>
        <label>Car Travel To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Car_Type__c</fullName>
        <label>Car Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certify_Expense_ID__c</fullName>
        <label>Certify Expense ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <description>Copied from Invoice.Dept Code - 20080731 MB.</description>
        <inlineHelpText>Please enter the Cost Center Code for this expense.</inlineHelpText>
        <label>Cost Center</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LBU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>DLYLOCL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Incurred__c</fullName>
        <label>Country Incurred</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>United Arab Emirates</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Incurred__c</fullName>
        <label>Date Incurred</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Invoiced__c</fullName>
        <label>Date Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the Expense</description>
        <inlineHelpText>The Expense Description displays on your Individual Expense Reclaim Report. Please make sure that sufficient information has been entered to enable you manager to approve your claim</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Distance_Travelled__c</fullName>
        <label>Distance Travelled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_rate__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Please enter the currency exchange rate for converting the expense value to the Home Currency.</inlineHelpText>
        <label>Exchange rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Type_Certify__c</fullName>
        <label>Expense Type (Certify)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Airfares</fullName>
                </value>
                <value>
                    <fullName>Bank Charges - Account Charges</fullName>
                </value>
                <value>
                    <fullName>Business Ent Deductible</fullName>
                </value>
                <value>
                    <fullName>Business Ent Non Deductible</fullName>
                </value>
                <value>
                    <fullName>Business Meals</fullName>
                </value>
                <value>
                    <fullName>Business Meals - Alcohol</fullName>
                </value>
                <value>
                    <fullName>Car Rental</fullName>
                </value>
                <value>
                    <fullName>Charitable Donations &amp; Gifts</fullName>
                </value>
                <value>
                    <fullName>Corporate Card Accruals</fullName>
                </value>
                <value>
                    <fullName>Couriers</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Fuel costs</fullName>
                </value>
                <value>
                    <fullName>Gifts</fullName>
                </value>
                <value>
                    <fullName>Gift Vouchers (Employee)</fullName>
                </value>
                <value>
                    <fullName>Gift Vouchers (Non SHL)</fullName>
                </value>
                <value>
                    <fullName>Hotels</fullName>
                </value>
                <value>
                    <fullName>Legal - Other</fullName>
                </value>
                <value>
                    <fullName>Legal - Staff Related</fullName>
                </value>
                <value>
                    <fullName>Meal Allowance</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Mileage ROW</fullName>
                </value>
                <value>
                    <fullName>Mileage UK</fullName>
                </value>
                <value>
                    <fullName>Mileage US</fullName>
                </value>
                <value>
                    <fullName>Mobiles/Internet</fullName>
                </value>
                <value>
                    <fullName>Office supplies</fullName>
                </value>
                <value>
                    <fullName>Other Benefits</fullName>
                </value>
                <value>
                    <fullName>Parking Tolls</fullName>
                </value>
                <value>
                    <fullName>Postage</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Professional Subscriptions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airfares - 651110 / 751110</fullName>
                </value>
                <value>
                    <fullName>Books &amp; Periodicals - 783100</fullName>
                </value>
                <value>
                    <fullName>Business Ent Deductible - 751340</fullName>
                </value>
                <value>
                    <fullName>Business Meals Deductible - 651320 / 751320</fullName>
                </value>
                <value>
                    <fullName>Car Travel - 651200 / 751200</fullName>
                </value>
                <value>
                    <fullName>Fuel Costs - 603322</fullName>
                </value>
                <value>
                    <fullName>Gifts Deductible - 751350</fullName>
                </value>
                <value>
                    <fullName>Hotels - 651310 / 751310</fullName>
                </value>
                <value>
                    <fullName>International Airfares - 651115</fullName>
                </value>
                <value>
                    <fullName>Internet - 651440</fullName>
                </value>
                <value>
                    <fullName>Meal Allowance - 603410 / 703410</fullName>
                </value>
                <value>
                    <fullName>Medical - 603120 / 703120</fullName>
                </value>
                <value>
                    <fullName>Minor Non-IT Equip - 784200</fullName>
                </value>
                <value>
                    <fullName>Mobile Devices - 742310</fullName>
                </value>
                <value>
                    <fullName>Other Benefits - 603412 / 703412</fullName>
                </value>
                <value>
                    <fullName>Other - Complete Description field</fullName>
                </value>
                <value>
                    <fullName>Parking Tolls - 651230</fullName>
                </value>
                <value>
                    <fullName>Postage - 782000</fullName>
                </value>
                <value>
                    <fullName>Public Transport (not Taxi) - 651130 / 751130</fullName>
                </value>
                <value>
                    <fullName>Relocation - 604710 / 704710</fullName>
                </value>
                <value>
                    <fullName>Small IT Purchases - 744440</fullName>
                </value>
                <value>
                    <fullName>Small Purchases - 651510</fullName>
                </value>
                <value>
                    <fullName>Staff Ent Deductible - 651330 / 751330</fullName>
                </value>
                <value>
                    <fullName>Stationery - 784300</fullName>
                </value>
                <value>
                    <fullName>Taxi - 651120 / 751120</fullName>
                </value>
                <value>
                    <fullName>Training - Lunches etc. Deductible - 635170</fullName>
                </value>
                <value>
                    <fullName>Training Products COS - 635130</fullName>
                </value>
                <value>
                    <fullName>Vending Supplies - 704760</fullName>
                </value>
                <value>
                    <fullName>Venue hire - 651415</fullName>
                </value>
                <value>
                    <fullName>Visa - 651140</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foreign_Currency__c</fullName>
        <label>Foreign Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The invoice in which the amount against this expense has
			been included.</description>
        <inlineHelpText>The invoice in which the amount against this expense has
			been included.</inlineHelpText>
        <label>Invoice Request</label>
        <referenceTo>Project_Invoice__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBU__c</fullName>
        <label>LBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abu Dhabi - AD1</fullName>
                </value>
                <value>
                    <fullName>Australia - AU1</fullName>
                </value>
                <value>
                    <fullName>Belgium SPS - BE5</fullName>
                </value>
                <value>
                    <fullName>Canada - CA1</fullName>
                </value>
                <value>
                    <fullName>China - CN1</fullName>
                </value>
                <value>
                    <fullName>Denmark - DK1</fullName>
                </value>
                <value>
                    <fullName>Finland - FI1</fullName>
                </value>
                <value>
                    <fullName>France SPS - FR5</fullName>
                </value>
                <value>
                    <fullName>Germany SPS - DE5</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - HK1</fullName>
                </value>
                <value>
                    <fullName>India - IN1</fullName>
                </value>
                <value>
                    <fullName>Italy - IT1</fullName>
                </value>
                <value>
                    <fullName>Middle East - ME1</fullName>
                </value>
                <value>
                    <fullName>Netherlands SPS - NL5</fullName>
                </value>
                <value>
                    <fullName>New Zealand - NZ1</fullName>
                </value>
                <value>
                    <fullName>Norway - NO1</fullName>
                </value>
                <value>
                    <fullName>Philippines - PH1</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia - SA5</fullName>
                </value>
                <value>
                    <fullName>Singapore - SG1</fullName>
                </value>
                <value>
                    <fullName>South Africa - ZA1</fullName>
                </value>
                <value>
                    <fullName>Sweden - SE1</fullName>
                </value>
                <value>
                    <fullName>Switzerland - CH1</fullName>
                </value>
                <value>
                    <fullName>UK - UK1</fullName>
                </value>
                <value>
                    <fullName>US - US5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Measurement__c</fullName>
        <inlineHelpText>Please enter the unit of measurement for the Distance Travelled field.</inlineHelpText>
        <label>Measurement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Kilometers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mileage_Rate_In_Project_Currency__c</fullName>
        <description>This shows the value in Project Currency</description>
        <formula>Value__c  /  Distance_Travelled__c</formula>
        <label>Mileage Rate (In Project Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mileage_Rate__c</fullName>
        <inlineHelpText>Please enter your mileage rate per unit of distance travelled.</inlineHelpText>
        <label>Mileage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <formula>(Value__c) -( VAT_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>Specify the method in which the payment for the expenses was
			made</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid cash</fullName>
                </value>
                <value>
                    <fullName>Paid with company credit card</fullName>
                </value>
                <value>
                    <fullName>Paid directly by SHL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processed_Date__c</fullName>
        <label>Processed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expenses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Receipt_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receipt Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rechargeable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rechargeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportFilterByOwner__c</fullName>
        <formula>IF(Resource__c  = $User.Id ,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReportFilterByOwner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_s_Home_Currency__c</fullName>
        <inlineHelpText>Please enter the home currency of the resource.</inlineHelpText>
        <label>Resource&apos;s Home Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_of_Requestor__c</fullName>
        <inlineHelpText>Please enter the role of the requestor.</inlineHelpText>
        <label>Role of Requestor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Support</fullName>
                </value>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Operations or Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Submitted for Processing</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_in_Home_currency__c</fullName>
        <description>Changed to Number type otherwise reporting as same currency as value.</description>
        <formula>IF(Exchange_rate__c&gt;0, Value__c * Exchange_rate__c, Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the value of the expense in the owner&apos;s home currency (Value x Exchange Rate).</inlineHelpText>
        <label>Total in Home currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_s_Company_BU__c</fullName>
        <formula>CASE($User.Company_BU__c,
&quot;Abu Dhabi - AD1&quot;,&quot;Abu Dhabi - AD1&quot;,
&quot;AP Region - P10&quot;, &quot;AP Region - P10&quot;,
 &quot;Australia - AU1&quot;,&quot;Australia - AU1&quot;,
&quot;Belgium - BE1&quot;,&quot;Belgium - BE1&quot;,
&quot;Belgium SPS - BE5&quot;,&quot;Belgium SPS - BE5&quot;,
&quot;Canada - CA1&quot;,&quot;Canada - CA1&quot;,
&quot;Denmark - DK1&quot;,&quot;Denmark - DK1&quot;,
&quot;Denmark SPS - DK5&quot;,&quot;Denmark SPS - DK5&quot;,
&quot;EU Region - E50&quot;,&quot;EU Region - E50&quot;,
&quot;Finland - FI1&quot;,&quot;Finland - FI1&quot;,
&quot;France - FR1&quot;,&quot;France - FR1&quot;,
&quot;France SPS - FR5&quot;,&quot;France SPS - FR5&quot;,
&quot;Germany - DE1&quot;,&quot;Germany - DE1&quot;,
&quot;Germany SPS - DE5&quot;,&quot;Germany SPS - DE5&quot;,
&quot;Hong Kong - HK1&quot;,&quot;Hong Kong - HK1&quot;,
&quot;India - IN1&quot;,&quot;India - IN1&quot;,&quot;Ireland - IE1&quot;,
&quot;Ireland - IE1&quot;,&quot;Italy - IT1&quot;,&quot;Italy - IT1&quot;,
&quot;Netherlands - NL1&quot;,&quot;Netherlands - NL1&quot;,
&quot;Netherlands SPS - NL5&quot;,&quot;Netherlands SPS - NL5&quot;,
&quot;New Zealand - NZ1&quot;,&quot;New Zealand - NZ1&quot;,
&quot;Norway - NO1&quot;,&quot;Norway - NO1&quot;,
&quot;Poland - PL1&quot;,&quot;Poland - PL1&quot;,
&quot;Saudi Arabia - SA5&quot;,&quot;Saudi Arabia - SA5&quot;,
&quot;Singapore - SG1&quot;,&quot;Singapore - SG1&quot;,
&quot;South Africa - ZA1&quot;,&quot;South Africa - ZA1&quot;,
&quot;Spain - ES1&quot;,&quot;Spain - ES1&quot;,
&quot;Sweden - SE1&quot;,&quot;Sweden - SE1&quot;,
&quot;Sweden SPS - SE5&quot;,&quot;Sweden SPS - SE5&quot;,
&quot;Switzerland - CH1&quot;,&quot;Switzerland - CH1&quot;,
&quot;UK SCS - UK5&quot;,&quot;UK SCS - UK5&quot;,
&quot;UK - UK1&quot;,&quot;UK - UK1&quot;,
&quot;US - US1&quot;,&quot;US - US1&quot;,
&quot;none&quot;)</formula>
        <label>User&apos;s Company BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <inlineHelpText>This field should contain all VAT or other Sales Taxes. Only enter these values if they are shown on your receipt.</inlineHelpText>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specify whether VAT is application for this expense</description>
        <label>VAT Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT_Rate__c</fullName>
        <description>Specify the VAT rate for the expense</description>
        <inlineHelpText>This field should contain all VAT or other Sales Taxes. Only enter these values if they are shown on your receipt</inlineHelpText>
        <label>VAT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>Please enter the currency and value of the cost incurred.</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Value__c</columns>
        <columns>Resource__c</columns>
        <columns>Date_Incurred__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2022 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E{000000}</displayFormat>
        <label>Expense Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <recordTypes>
        <fullName>Car_Travel_Expense</fullName>
        <active>true</active>
        <label>Car Travel Expense</label>
    </recordTypes>
    <recordTypes>
        <fullName>Certify_Expenses</fullName>
        <active>true</active>
        <label>Certify Expenses</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Expenses</fullName>
        <active>true</active>
        <label>General Expenses</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Field_Required_for_Car_Expense</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Expense_Type__c, &quot;Car Travel - 651200 / 751200&quot;),
OR(IF( Car_Travel_From__c=&quot;&quot;,TRUE,FALSE ),IF( Car_Travel_To__c=&quot;&quot;,TRUE,FALSE ),ISPICKVAL( Car_Type__c ,&quot;&quot;),ISNULL( Distance_Travelled__c ),ISPICKVAL( Measurement__c ,&quot;&quot;),ISNULL( Mileage_Rate__c )))</errorConditionFormula>
        <errorMessage>Please complete all fields in the Car Information section for an Expense Type of &apos;Car Travel&apos;.</errorMessage>
    </validationRules>
</CustomObject>